Channel Backup Final
Channel Backup Final

--- a/sample-RTL.conf
+++ b/sample-RTL.conf
@@ -11,7 +11,7 @@ menu=Vertical
 menuType=Regular
 theme=dark-blue
 satsToBTC=false
-channelBackupPath=C:\RTL\backup\node-0
+channelBackupPath=C:\RTL\backup
 bitcoindConfigPath=
 enableLogging=true
 port=3000
